<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           android:textColor="#000000"
           android:textSize="17sp"
           android:textStyle="bold"
           android:text="@string/checktitle"
           android:gravity="center"
           android:layout_margin="10dp"/>
       <LinearLayout
           android:layout_marginLeft="30dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           android:orientation="vertical">
           <CheckBox
               android:layout_width="match_parent"
               android:textColor="#000000"
               android:layout_height="wrap_content"

               android:text="@string/check1"
               android:buttonTint="@color/orgin_tint"/>
           <CheckBox
               android:layout_width="match_parent"
               android:textColor="#000000"
               android:layout_height="wrap_content"

               android:text="@string/check2"
               android:buttonTint="@color/orgin_tint"/>
           <CheckBox
               android:layout_width="match_parent"
               android:textColor="#000000"
               android:layout_height="wrap_content"

               android:text="@string/check3"
               android:buttonTint="@color/orgin_tint"/>
           <CheckBox
               android:layout_width="match_parent"
               android:textColor="#000000"
               android:layout_height="wrap_content"

               android:text="@string/check4"
               android:buttonTint="@color/orgin_tint"/>
           <CheckBox
               android:layout_width="match_parent"
               android:textColor="#000000"
               android:layout_height="wrap_content"

               android:text="@string/check5"
               android:buttonTint="@color/orgin_tint"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_marginTop="10dp"
           android:gravity="center"
           android:background="@color/orgin_tint"
           android:layout_height="50dp" >
           <TextView
               android:layout_width="wrap_content"

               android:textSize="17sp"
               android:textStyle="bold"
               android:text="@string/checkbutton"
               android:textColor="@color/white_tint"
               android:layout_height="wrap_content" />
       </LinearLayout>
   </LinearLayout>

