<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_calender"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back"
            android:src="@drawable/back_icon"
            android:tint="@color/white_tint"
            android:layout_marginRight="10dp"
            android:layout_gravity="left"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:textSize="18sp"
            android:textAllCaps="true"
            android:id="@+id/user_coach_title"
            android:textColor="@color/white_tint"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="Reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize" />

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/toolbar_calender"
        android:id="@+id/nestedview"
        android:layout_width="400dp"
        android:layout_height="719dp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.applikeysolutions.cosmocalendar.view.CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_settings"
                app:selectedDayBackgroundColor="#e75b00"
                app:weekendDayTextColor="@color/orgin_tint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/calendar_view"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="4dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/greencolor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_disposable"
                        android:textSize="11dp" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/orgin_tint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_attente"
                        android:textSize="11dp" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/colorGoogleRed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_reserve"
                        android:textSize="11dp" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/button_cancel" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_non_disposable"
                        android:textSize="11dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recylerTimeShow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"></androidx.recyclerview.widget.RecyclerView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recylerTimeSelection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_orientation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkedButton="@+id/rb_vertical">

            <RadioButton
                android:id="@+id/rb_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horizontal" />

            <RadioButton
                android:id="@+id/rb_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_selection_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkedButton="@+id/rb_single">

            <RadioButton
                android:id="@+id/rb_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single" />

            <RadioButton
                android:id="@+id/rb_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiple" />

            <RadioButton
                android:id="@+id/rb_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range" />

            <RadioButton
                android:id="@+id/rb_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

        </RadioGroup>

    </LinearLayout>
    <Button
        android:background="@drawable/roundfacebook"
        android:textColor="@color/white_tint"
        android:textStyle="bold"
        android:textSize="9dp"
        android:padding="10dp"
        android:backgroundTint="@color/colorGoogleBlue"
        android:id="@+id/floating"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="RESERVE"
        android:layout_width="60dp"
        android:layout_height="60dp" />
    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--android:text="@string/submit"-->
        <!---->
        <!--android:layout_margin="20dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

</RelativeLayout>